--- a/products.html
+++ b/products.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Adrena</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/products.css">
 </head>
 <body>
 	<div id="navbar">
@@ -11,18 +12,21 @@
 			<img class="logo" src="css/images/logo.png" alt="logo" width="100">
 			<nav>
 				<ul class="nav_links">
-					<li class="navlink"><a href="#">Home</a></li>
+					<li class="navlink"><a href="index.html">Home</a></li>
 					<li class="navlink"><a href="#">Gallery</a></li>
-					<li class="navlink"><a href="products.html">Products</a></li>
+					<li class="navlink"><a href="#">Products</a></li>
 				</ul>
 			</nav>
 			<a class="cta" href="#"><button class="contactbtn">Contact</button></a>
 		</header>
 	</div>
 
+	<h1>h</h1>
+	<button id="checkout-button" class="contactbtn">Checkout button</button>
+
 	<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-analytics.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
 	<script src="js/scripts.js"></script>
 
 </body>
-</html> 
+</html>
