--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 		</header>
 	</div>
 
-	<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-analytics.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-functions.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
+	<script src="https://js.stripe.com/v3/"></script>
 	<script src="js/scripts.js"></script>
 
 </body>
