--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
 	<h1>h</h1>
 	<button id="checkout-button" class="contactbtn">Checkout button</button>
 
-	<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-analytics.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-functions.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
 	<script src="js/scripts.js"></script>
 
